--- a/Dengue_Clima.ipynb
+++ b/Dengue_Clima.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\João\\AppData\\Local\\Temp\\ipykernel_10752\\780695851.py:6: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "#!/usr/bin/env python3.7.11\n",
     "# -*- Coding: UTF-8 -*-\n",
@@ -14,13 +29,6 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -61,148 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def empty_df(column_names):\n",
-    "    '''\n",
-    "    Create empty dataframe\n",
-    "    '''\n",
-    "    return pd.DataFrame(columns = column_names)\n",
-    "\n",
-    "def read_csv(filename):\n",
-    "    '''\n",
-    "    Read CSV to use like dataframe\n",
-    "    '''\n",
-    "    df = pd.read_csv(filename, encoding='iso-8859-1',\\\n",
-    "     decimal=',', delimiter=';', skiprows=8)\n",
-    "    return df\n",
-    "\n",
-    "def check_header(df):\n",
-    "    '''\n",
-    "    Check header formats\n",
-    "    '''\n",
-    "    name1 = 'DATA (YYYY-MM-DD)'\n",
-    "    name2 = 'Data'\n",
-    "    colname_hour = 'HORA (UTC)'\n",
-    "    temp_format = 'TEMPERATURA DO AR - BULBO SECO, HORARIA (°C)'\n",
-    "    if name1 in df.columns:\n",
-    "        colname_date = name1\n",
-    "        ts_format = '%Y-%m-%d %H:%M'\n",
-    "    elif name2 in df.columns:\n",
-    "        colname_date = name2\n",
-    "        if 'Hora UTC' in df.columns:\n",
-    "            colname_hour = 'Hora UTC'\n",
-    "        ts_format = '%Y/%m/%d %H%M UTC'\n",
-    "    else:\n",
-    "        print('Cheack header format manually')\n",
-    "        exit()\n",
-    "    return colname_date, colname_hour, ts_format, temp_format\n",
-    "\n",
-    "def prepare_df(df, df_all, filename, colname_date, colname_hour,\\\n",
-    " ts_format, temp_format, column_names):\n",
-    "    '''\n",
-    "    Prepare dataframe with all data from multiple CSV files\n",
-    "    '''\n",
-    "    # Create timestamp column\n",
-    "    df['Timestamp'] = df[colname_date] + ' ' + df[colname_hour]\n",
-    "    df['Timestamp'] = pd.to_datetime(df['Timestamp'], format=ts_format)\n",
-    "    # Select/Rename column\n",
-    "    #print(df.loc[:, df.columns.str.contains('Temp')])\n",
-    "    df.rename(columns = {temp_format:'Temp'}, inplace = True)\n",
-    "    # Get station code in filename and create column with it\n",
-    "    code = filename.split('/')[-1][12:16]\n",
-    "    df['Codigo'] = code\n",
-    "    # Insert in final dataframe\n",
-    "    df_all = df_all.append(df[column_names])\n",
-    "    return df_all\n",
-    "\n",
-    "def save_csv(df, filename):\n",
-    "    '''\n",
-    "    Save dataframe to CSV file\n",
-    "    '''\n",
-    "    df.to_csv(filename, index=False)\n",
-    "    return 'CSV saved'\n",
-    "\n",
-    "def select_station(df, code):\n",
-    "    '''\n",
-    "    Select rows from same station/code, between two times, between two values;\n",
-    "    Replace invalid values\n",
-    "    '''\n",
-    "    df_station = df.loc[df['Codigo'] == code]\n",
-    "    row_station = [code]\n",
-    "    # Restrict time\n",
-    "    df_station.index = df_station['Timestamp']\n",
-    "    df_station = df_station.between_time('9:00', '21:00')\n",
-    "    # Replace invalid values (-9999) with NaN\n",
-    "    df_station.loc[df_station['Temp'] == -9999, 'Temp'] = np.nan\n",
-    "    # Replace outliers with NaN\n",
-    "    df_station.loc[(df_station['Temp'] < 10) | (df_station['Temp'] > 41), 'Temp'] = np.nan\n",
-    "    return df_station, row_station\n",
-    "\n",
-    "def calc_mean(df_station, m):\n",
-    "    '''\n",
-    "    Calculate mean from same month (could be multiple years - climatological mean);\n",
-    "    Insert result in the station line\n",
-    "    '''\n",
-    "    df_month = df_station[df_station['Timestamp'].dt.month == m]\n",
-    "    # Calculate monthly climatological average and insert in the station line\n",
-    "    month_mean = round(df_month['Temp'].mean(),2)\n",
-    "    row_station.append(month_mean)\n",
-    "    return row_station\n",
-    "\n",
-    "def loop_month(row_station, df_station, df_means):\n",
-    "    '''\n",
-    "    Loop for months and update dataframe with monthly means\n",
-    "    '''\n",
-    "    for m in range(1,12+1):\n",
-    "        row_station = calc_mean(df_station, m)\n",
-    "    # Insert row with all mean values from station into final DF\n",
-    "    df_means.loc[len(df_means)] = row_station\n",
-    "    return df_means\n",
-    "\n",
-    "def plot_ts(df, code):\n",
-    "    '''\n",
-    "    Plot time series\n",
-    "    '''\n",
-    "    filename = f'ts_{code}.png'\n",
-    "    plt.figure(figsize=[14,5])\n",
-    "    plt.title(f'{code}')\n",
-    "    plt.plot(df.index, df['Temp'], linestyle=':', marker='o')\n",
-    "    plt.savefig(filename, bbox_inches='tight')\n",
-    "    plt.close()\n",
-    "\n",
-    "################################## MAIN ##################################\n",
-    "\n",
-    "list_of_files = list_files('Automaticas_INMET')\n",
-    "\n",
-    "# Create empty dataframe with columns to be filled\n",
-    "column_names = ['Codigo', 'Timestamp', 'Temp']\n",
-    "df_all = empty_df(column_names)\n",
-    "for filename in list_of_files:\n",
-    "    # Read CSV file and save in dataframe\n",
-    "    df = read_csv(filename)\n",
-    "    colname_date, colname_hour, ts_format, temp_format = check_header(df)\n",
-    "    df_all = prepare_df(df, df_all, filename, colname_date,\\\n",
-    "     colname_hour, ts_format, temp_format, column_names)\n",
-    "\n",
-    "# Save all data in final file\n",
-    "#save_csv(df_all, 'all_temp.csv')\n",
-    "\n",
-    "# Create empty dataframe with columns to be filled\n",
-    "df_means = empty_df(['Codigo', 'm01', 'm02', 'm03', 'm04',\\\n",
-    " 'm05', 'm06', 'm07', 'm08', 'm09', 'm10', 'm11', 'm12'])\n",
-    "\n",
-    "# List all stations\n",
-    "codes_lst = list(dict.fromkeys(df['Codigo']))\n",
-    "for code in codes_lst:\n",
-    "    # Create/Prepare dataframe with station data\n",
-    "    df_station, row_station = select_station(df, code)\n",
-    "    # Make a total graph of the station's time series\n",
-    "    plot_ts(df_station, code)\n",
-    "    # Select month and calculate mean\n",
-    "    df_means = loop_month(row_station, df_station, df_means)\n",
-    "\n",
-    "# Save data in final file\n",
-    "save_csv(df_means, 'medias_mensais.csv')"
+    "\n"
    ]
   }
  ],
