--- a/Dengue_Clima.ipynb
+++ b/Dengue_Clima.ipynb
@@ -30,6 +30,27 @@
     "        )\n",
     "    )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'isudhfgoiasuhrgowershgoirhjgorihgg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43misudhfgoiasuhrgowershgoirhjgorihgg\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'isudhfgoiasuhrgowershgoirhjgorihgg' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "isudhfgoiasuhrgowershgoirhjgorihgg"
+   ]
   }
  ],
  "metadata": {
